[refact] : refact find groupmember method